# INHA-Ros2-Vision-Die-Bonder-Sim

./: .env.example  .gitignore  LICENSE  Makefile  README.md  requirements.txt
docs/: API Specification.md  db_table.md  sequence_diagram.md
src/robot_control_pkg/: package.xml  setup.py
src/robot_system_description/: CMakeLists.txt  package.xml
src/robot_system_description/launch/: controller.launch  controller.yaml  display.launch  gazebo.launch  gazebo.launch.py  gazebo_camera.launch.py  start_robot.launch.py
src/robot_system_description/meshes/: base_link.stl  theta_link_1.stl  x_link_1.stl  y_link_1.stl  z_link_1.stl
src/robot_system_description/models/red_check_chip/: model.sdf
src/robot_system_description/test_images/vision_references/pick/: metadata.json
src/robot_system_description/test_images/vision_references/place_empty/: metadata.json
src/robot_system_description/test_images/vision_references/place_stacked/: metadata.json
src/robot_system_description/urdf/: materials.xacro  robot_system.gazebo  robot_system.trans  robot_system.xacro  robot_system_compiled.urdf
src/robot_system_description/worlds/: empty_with_sensors.sdf
src/vision_core/: package.xml  setup.py
vision_node/: main.py  requirements.txt  vision_aligner.py
web_backend/: main.py
web_backend/api/: robot_control_api.py  robot_log_api.py  user_api.py
web_backend/core/: config.py  logger.py  rate_limit.py  security.py
web_backend/db/: database.py  init_db.py  postgres_connection.py  redis_connection.py  register_user.py  tables.py
web_backend/models/: robot_log_models.py  user_logs_models.py  user_models.py
web_backend/schemas/: common_schemas.py  robot_control_schemas.py  robot_log_schemas.py  user_schemas.py
web_backend/services/: robot_log_services.py  user_services.py
web_backend/tests/: test_robot_control_api.py
web_frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
web_frontend/src/: App.jsx
(+24 files in other folders)
